# GamePractice

./: .gitignore  .gitmodules  README.md
Sources/Code/: CMakeLists.txt  android_main.cpp  android_main.hpp  assets_dir.cmake  compile_flags.cmake  dependicies.cmake  desktop_main.cpp
Sources/Code/Application/: AppRunState.cpp  AppRunState.hpp  Application.cpp  Application.hpp  Assets.hpp  AssetsCacheManager.cpp  AssetsCacheManager.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  CoreModule.cpp  CoreModule.hpp  ETApplicationInterfaces.hpp  Environment.cpp  Environment.hpp  JSONNode.cpp  JSONNode.hpp  Logger.cpp  Logger.hpp  ModuleFactory.cpp  ModuleFactory.hpp  Platform.hpp  Surface.hpp  Timer.cpp  Timer.hpp
Sources/Code/Application/Audio/: AudioConfig.hpp  AudioModule.cpp  AudioModule.hpp  AudioSystem.cpp  AudioSystem.hpp  ETAudioInterfaces.hpp  OggDataStream.cpp  OggDataStream.hpp  Resampler.cpp  Resampler.hpp  Sound.cpp  Sound.hpp  SoundManager.cpp  SoundManager.hpp  SoundSource.cpp  SoundSource.hpp  SoundSourceController.hpp  SoundSourceManager.cpp
Sources/Code/Application/Core/: Buffer.cpp  Buffer.hpp  Core.hpp  ETPrimitives.hpp  ETSynchronization.cpp  ETSynchronization.hpp  ETSystem.cpp  ETSystem.hpp  JSONNode.cpp  JSONNode.hpp  ModuleConfig.hpp  ModuleConfigManager.cpp  ModuleConfigManager.hpp  StringFormat.cpp  StringFormat.hpp  SystemLogic.cpp  SystemLogic.hpp  SystemModule.cpp  SystemModule.hpp  TypeId.cpp  TypeId.hpp  Utils.hpp
Sources/Code/Application/Entity/: ETEntityInterfaces.hpp  Entity.cpp  Entity.hpp  EntityLogic.cpp  EntityLogic.hpp  EntityManager.cpp  EntityManager.hpp  EntityModule.cpp  EntityModule.hpp
Sources/Code/Application/Game/: ETGame.hpp  ETGameBoard.hpp  ETGameBoardSpawner.hpp  ETGameElem.hpp  ETGameElemsPool.hpp  ETGameInterfaces.hpp  ETGameMusic.hpp  ETGameScore.hpp  ETGameTimer.hpp  ETLevelProgress.hpp  ETLevelSelector.hpp  ETVisualEffect.hpp  Game.cpp  Game.hpp  GameConfig.cpp  GameConfig.hpp  GameETInterfaces.hpp  GameInitModule.cpp  GameInitModule.hpp  GameIniter.cpp  GameIniter.hpp  GameLogic.cpp  GameLogic.hpp  GameModule.cpp  GameModule.hpp  GameMusicManager.cpp  GameMusicManager.hpp  GameObject.cpp  GameObject.hpp  GameObjectCreator.cpp  GameObjectCreator.hpp  GameObjectManager.cpp  GameObjectManager.hpp  GameState.cpp  GameState.hpp  GameStateManager.cpp  GameStateManager.hpp  GameTimer.cpp  GameTimer.hpp  GameUtils.cpp  (+1 more)
Sources/Code/Application/Initer/: GameConfig.cpp  GameConfig.hpp  GameInitModule.cpp  GameInitModule.hpp  GameIniter.cpp  GameIniterConfig.cpp  GameIniterConfig.hpp
Sources/Code/Application/Laucher/: GameConfig.cpp  GameConfig.hpp  GameLaucher.cpp  GameLaucher.hpp  GameLaucherConfig.cpp  GameLaucherConfig.hpp  GameLaucherModule.cpp  GameLaucherModule.hpp
Sources/Code/Application/Math/: AABB.hpp  Matrix.cpp  Matrix.hpp  MatrixTransform.cpp  MatrixTransform.hpp  Primitivies.cpp  Primitivies.hpp  Quaternion.cpp  Transform.cpp  Transform.hpp  Vector.hpp
Sources/Code/Application/Render/: Camera2D.cpp  Camera2D.hpp  Color.hpp  ETRenderInterfaces.hpp  Render.cpp  Render.hpp  RenderCamera.cpp  RenderContext.cpp  RenderContext.hpp  RenderFont.cpp  RenderFont.hpp  RenderFontManager.cpp  RenderFontManager.hpp  RenderFontSystem.cpp  RenderFontSystem.hpp  RenderGeometry.cpp  RenderGeometry.hpp  RenderGeometryManager.cpp  RenderGeometryManager.hpp  RenderLogic.cpp  RenderLogic.hpp  RenderMaterial.cpp  RenderMaterial.hpp  RenderMaterialManager.cpp  RenderMaterialManager.hpp  RenderModule.cpp  RenderModule.hpp  RenderTexture.cpp  RenderTexture.hpp  RenderTextureFramebuffer.cpp  RenderTextureFramebuffer.hpp  RenderTextureManager.cpp  RenderTextureManager.hpp  RenderUtils.cpp  RenderUtils.hpp
Sources/Code/Application/UI/: ETUIInterfaces.hpp  UIConfigManager.cpp  UIConfigManager.hpp  UIETInterfaces.hpp  UIEventManager.cpp  UIEventManager.hpp  UIModule.cpp  UIModule.hpp  UIStyle.cpp  UIStyle.hpp  UISurfaceEventHandler.cpp  UISurfaceEventHandler.hpp  UISurfaceTouchManager.cpp  UISurfaceTouchManager.hpp  UIViewManager.cpp  UIViewManager.hpp  UIViewStack.cpp  UIViewStack.hpp  UIViewSwitcher.cpp  UIViewSwitcher.hpp
Sources/Code/Editor/: CMakeLists.txt
Sources/Code/Editor/include/: Editor.hpp
Sources/Code/Editor/src/: ETEditorInterfaces.hpp  EditEntityTracker.cpp  EditEntityTracker.hpp  Editor.cpp  EditorApp.cpp  EditorApp.hpp  EditorAssetsSetup.cpp  EditorAssetsSetup.hpp  EditorModule.cpp  EditorModule.hpp  EntityEditorHelper.cpp  EntityEditorHelper.hpp
Sources/Code/Engine/: AppRunState.hpp  Application.cpp  Application.hpp  AssetsCacheManager.cpp  AssetsCacheManager.hpp  CMakeLists.txt  CmakeLists.txt  CoreModule.cpp  CoreModule.hpp  ETApplicationInterfaces.hpp  Platform.hpp  Timer.hpp  dependicies.cmake
Sources/Code/Engine/Audio/: AudioConfig.cpp  AudioConfig.hpp  AudioModule.cpp  AudioModule.hpp  CMakeLists.txt  OggDataStream.cpp  Resampler.hpp  Sound.cpp  Sound.hpp  SoundManager.cpp  SoundSourceManager.cpp  SoundSourceManager.hpp
Sources/Code/Engine/Core/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Core.hpp  ETPrimitives.hpp  ETSynchronization.cpp  ETSystem.cpp  JSONNode.cpp  JSONNode.hpp  MemoryStream.cpp  MemoryStream.hpp  ModuleConfigManager.cpp  ModuleConfigManager.hpp  SystemLogic.cpp  SystemModule.cpp  SystemModule.hpp  Utils.hpp
Sources/Code/Engine/Entity/: CMakeLists.txt  ETEntityInterfaces.hpp  Entity.cpp  Entity.hpp  EntityLogic.hpp  EntityLogicRegister.cpp  EntityLogicRegister.hpp  EntityManager.cpp  EntityManager.hpp  EntityModule.cpp  EntityModule.hpp
Sources/Code/Engine/Math/: AABB.hpp  CMakeLists.txt  Primitivies.hpp  Quaternion.cpp  Quaternion.hpp  Transform.cpp  Transform.hpp
Sources/Code/Engine/Parallel/: CMakeLists.txt
Sources/Code/Engine/Platform/: CMakeLists.txt
Sources/Code/Engine/Reflect/: ArrayInfo.cpp  ArrayInfo.hpp  CMakeLists.txt  ClassInfo.cpp  ClassInfo.hpp  ClassInfoManager.cpp  ClassInfoManager.hpp  ClassInstance.cpp  ClassInstance.hpp  ClassIntance.cpp  ClassIntance.hpp  ClassValue.cpp  ClassValue.hpp  ETReflectInterfaces.hpp  (+6 more)
Sources/Code/Tests/: CMakeLists.txt  tests_main.cpp
(+1399 files in other folders)
