cmake_minimum_required(VERSION 3.10)

project(Application CXX)

if(APP_BUILD_PLATFORM STREQUAL "Windows" OR APP_BUILD_PLATFORM STREQUAL "Linux")
    set(APPLCATION_PLATFORM_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Platforms/Desktop)
elseif(APP_BUILD_PLATFORM STREQUAL "Android")
    set(APPLCATION_PLATFORM_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Platforms/Android)
endif()

file(GLOB APPLICATION_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Math/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Game/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Applcation/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Core/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Game/Logics/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/UI/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/UI/Logics/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Render/Logics/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Render/*.cpp
    ${APPLCATION_PLATFORM_SOURCES}/*.cpp)
file(GLOB APPLICATION_HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Math/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Game/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Game/Logics/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Applcation/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Render/Logics/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Render/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Core/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/UI/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/UI/Logics/*.cpp
    ${APPLCATION_PLATFORM_SOURCES}/*.hpp)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}
    ${FREETYPE2_INCLUDE_DIR}
    ${GLFW_INCLUDE_DIR}
    ${GLAD_INCLUDE_DIR}
    ${RAPID_JSON_INCLUDE_DIR})

add_library(${PROJECT_NAME} STATIC ${APPLICATION_SOURCES} ${APPLICATION_HEADERS})
target_compile_options(${PROJECT_NAME} PRIVATE ${CXX_APP_CHECK_FLAGS})