cmake_minimum_required(VERSION 3.10)

project(Application CXX)

if(APP_BUILD_PLATFORM STREQUAL "Windows" OR APP_BUILD_PLATFORM STREQUAL "Linux")
    set(APPLICATION_PLATFORM_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Platforms/Desktop)
    set(APPLICATION_PLATFORM_AUDIO_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Audio/Desktop)

    include_directories(${CMAKE_CURRENT_SOURCE_DIR}
        ${FREETYPE2_INCLUDE_DIR}
        ${GLFW_INCLUDE_DIR}
        ${GLAD_INCLUDE_DIR}
        ${RAPID_JSON_INCLUDE_DIR}
        ${STB_INCLUDE_DIR}
        ${OPENAL_SOFT_INCLUDE_DIR})

elseif(APP_BUILD_PLATFORM STREQUAL "Android")
    set(APPLICATION_PLATFORM_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Platforms/Android)
    set(APPLICATION_PLATFORM_AUDIO_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Audio/Android)

    include_directories(${CMAKE_CURRENT_SOURCE_DIR}
        ${FREETYPE2_INCLUDE_DIR}
        ${OBOE_INCLUDE_DIR}
        ${RAPID_JSON_INCLUDE_DIR}
        ${STB_INCLUDE_DIR})

endif()

file(GLOB APPLICATION_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Math/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Game/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Game/Logics/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Game/States/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Applcation/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Core/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/UI/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/UI/Logics/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Render/Logics/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Render/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Entity/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Audio/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Audio/Logics/*.cpp
    ${APPLICATION_PLATFORM_AUDIO_SOURCES}/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Initer/*.cpp
    ${APPLICATION_PLATFORM_SOURCES}/*.cpp)

file(GLOB APPLICATION_HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Math/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Game/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Game/Logics/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Game/States/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Applcation/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Render/Logics/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Render/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Core/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/UI/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/UI/Logics/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Entity/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Audio/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Audio/Logics/*.hpp
    ${APPLICATION_PLATFORM_AUDIO_SOURCES}/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Initer/*.hpp
    ${APPLICATION_PLATFORM_SOURCES}/*.hpp)

add_library(${PROJECT_NAME} STATIC ${APPLICATION_SOURCES} ${APPLICATION_HEADERS})
target_compile_options(${PROJECT_NAME} PRIVATE ${CXX_APP_CHECK_FLAGS})