cmake_minimum_required(VERSION 3.15)

project(TestUtils CXX)

set(TEST_UTILS_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE PATH "Test Utils include dir")

include_directories(${GTEST_INCLUDE_DIR}
    ${TEST_UTILS_INCLUDE_DIR}
    ${ENGINE_INCLUDE_DIR}
    ${APPLICATION_INCLUDE_DIR}
    ${CORE_INCLUDE_DIR}
    ${RENDER_INCLUDE_DIR}
    ${GLAD_INCLUDE_DIR})

file(GLOB TEST_UTILS_TESTS_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)

file(GLOB TEST_UTILS_TESTS_HEADERS
    ${APPLICATION_TEST_SOURCES}/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/include/TestUtils/*.hpp)

add_library(${PROJECT_NAME} STATIC
    ${TEST_UTILS_TESTS_SOURCES}
    ${TEST_UTILS_TESTS_HEADERS})

set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_PDB_NAME ${PROJECT_NAME})